--- a/index.html
+++ b/index.html
@@ -3,59 +3,40 @@
 <head>
 <title>To Do List</title>
 <style>
+  .overall {
+    font-family: sans-serif;
+    text-align: center;
+  }
+
+  .heading {
+    background-color: coral;
+  }
+
   </style>
   </head>
-  <body>
+  <body class="overall">
 
-<h1>TO DO LIST</h1>
+<h1 class="heading">TO DO LIST</h1>
 
-<p>What day will you do laundry?</p>
-<input type ="radio">Monday</input>
-<input type ="radio">Tuesday</input>
-<input type ="radio">Wednesday</input>
-<input type ="radio">Thursday</input>
-<input type ="radio">Friday</input>
-<input type ="radio">Saturday</input>
-<input type ="radio">Sunday</input>
-
-<p>What day will you mow the lawn?</p>
-<input type ="radio">Monday</input>
-<input type ="radio">Tuesday</input>
-<input type ="radio">Wednesday</input>
-<input type ="radio">Thursday</input>
-<input type ="radio">Friday</input>
-<input type ="radio">Saturday</input>
-<input type ="radio">Sunday</input>
-
-<p>How many days will you go to the gym this week?</p>
-<input type="radio">1</input>
-<input type="radio">2</input>
-<input type="radio">3</input>
-<input type="radio">4</input>
-<input type="radio">5</input>
-<input type="radio">6</input>
-<input type="radio">7</input>
-
-<p>Will you go to Church on Sunday?</p>
-<input type="radio">Yes</input>
-<input type="radio">No</input>
-<input type="radio">Maybe</input>
-
-<form>
-<p>Tell me what you need to do on Monday</p>
-Explain in detail: <input type="text">
+<div>
+  <div>
+<p>Add Something To Your To Do List:</p>
+<form>What's Next?: <input type="text">
 </form>
-
-<p>Tell me what you need to do on Tuesday</p>
-Explain in detail: <input type="text">
-</form>
-
-<p>Tell me what you need to do on Wednesday</p>
-Explain in detail: <input type="text">
-</form>
-
-
-
+<div>
+  <p>What's The Status?</p>
+  <input type="radio">Pending</input>
+  <input type="radio">In Progress</input>
+  <input type="radio">Delete</input>
+</div>
+</div>
+<div>
+<p><del>strikethrough practice</del></p>
+<p><del>strikethrough</del> practice</p>
+<p>strikethrough <del>practice</del></p>
+<p>strike<del>through prac</del>tice</p>
+</div>
+</div>
 <script>
   </script>
     </body>
