--- a/index.html
+++ b/index.html
@@ -8,27 +8,41 @@
     text-align: center;
   }
 
-  .heading {
+  #header-title {
     background-color: coral;
   }
+  #form1 {
+    margin: 15px;
+    padding: 15px;
+  }
+  .boxes{
+    margin: 15px;
+    padding: 15px;
 
+  }
+  }
   </style>
   </head>
   <body class="overall">
 
-<h1 class="heading">TO DO LIST</h1>
+<h1 id="header-title">TO DO LIST</h1>
 
 <div>
+  <fieldset>
   <div>
 <p>Add Something To Your To Do List:</p>
-<form>What's Next?: <input type="text">
+<legend>The Answer To Being More Productive Is Here</legend>
+  <input type="text" id="question" oninput="listBuild()" value="What's next?">
 </form>
+
 <div>
   <p>What's The Status?</p>
-  <input type="radio">Pending</input>
+  <input type="radio">Finished</input>
   <input type="radio">In Progress</input>
+  <input type="radio">Pending</input>
   <input type="radio">Delete</input>
 </div>
+</fieldset>
 </div>
 <div>
 <p><del>strikethrough practice</del></p>
@@ -37,7 +51,19 @@
 <p>strike<del>through prac</del>tice</p>
 </div>
 </div>
+  <p id="compiledList"></p>
 <script>
+// var headerTitle = document.getElementById("header-title");
+// console.log(headerTitle);
+// headerTitle.textContent = 'Hello';
+
+function listBuild() {
+var choreX = document.getElementById("question").value;
+document.getElementById("compiledList").innerHTML = choreX
+
+}
+
+
   </script>
     </body>
 
