--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 </fieldset>
 </div>
 <div>
-<p><del>strikethrough practice</del></p>
+<!-- <p><del>strikethrough practice</del></p> -->
 </div>
 <div class="flex-container">
   <div>
     <p></p>
   </div>
-  <div>
-    <ul id="leest">
-      <li id="compiledList"></li>
+  <div id="leest">
+    <ul>
+    <p id="compiledList"></p>
     </ul>
   </div>
   <div>
