--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <fieldset>
   <div>
     <p>Add Something To Your To Do List:</p>
-      <input type="text" id="question" value="What's next?">
+      <input type="text" id="inputtedChore" value="What's next?">
       <input type="submit" id="subButton" onclick="hitSubmit()" value="SUBMIT">
 </form>
 <!-- <div>
@@ -34,7 +34,7 @@
   <div>
     <p></p>
   </div>
-  <div id="leest">
+  <div>
     <p id="compiledList"></p>
   </div>
   <div>
