--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
   <fieldset>
   <div>
       <p>Add Something To Your To Do List:</p>
-      <input type="text" id="inputtedChore" value="What's next?">
+      <input type="text" id="inputtedChore" value="What's next?" required>
       <input type="submit" id="subButton" value="SUBMIT">
   </fieldset>
   </div>
 <div class="flex-container">
   <div>
     <ul id="toDoList">
-      <!-- <li id="listItem"></li> -->
     </ul>
   </div>
 </div>
