--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <fieldset>
   <div>
       <p>Add Something To Your To Do List:</p>
-      <input type="text" id="inputtedChore" value="What's next?" required>
+      <input type="text" id="inputtedChore" required>
       <input type="submit" id="subButton" value="SUBMIT">
   </fieldset>
   </div>
 <div class="flex-container">
-  <div>
+    </div>
     <ul id="toDoList">
     </ul>
   </div>
