--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       <input type="submit" id="subButton" value="SUBMIT">
   </fieldset>
   </div>
-<div class="flex-container">
+<div class="flex-container" id="divDad">
     </div>
+    <p>Today's List:</p>
     <ul id="toDoList">
     </ul>
+    <input id="universalDelete" type="button" value="EMPTY LIST">
   </div>
 </div>
 
