--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
 <h1 id="header-title">TO DO LIST</h1>
 
 <div>
-  <fieldset>
-  <div>
+  <div id="fieldBox">
       <p>Add Something To Your To Do List:</p>
       <input type="text" id="inputtedChore" required>
       <input type="submit" id="subButton" value="SUBMIT">
-  </fieldset>
   </div>
 <div class="flex-container" id="divDad">
     </div>
-    <p>Today's List:</p>
     <ul id="toDoList">
     </ul>
     <input id="universalDelete" type="button" value="EMPTY LIST">
