--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 <div>
   <div id="fieldBox">
       <p>Add Something To Your To Do List:</p>
-      <input type="text" id="inputtedChore" required>
+      <input type="text" id="inputtedChore" size="30px" required>
       <input type="submit" id="subButton" value="SUBMIT">
   </div>
-<div class="flex-container" id="divDad">
     </div>
     <ul id="toDoList">
     </ul>
     <input id="universalDelete" type="button" value="EMPTY LIST">
   </div>
-</div>
 
 <script src="code.js"></script>
 
