--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 
 <h1 id="header-title">TO DO LIST</h1>
 
-<div>
   <div id="fieldBox">
       <p>Add Something To Your To Do List:</p>
       <input type="text" id="inputtedChore" size="30px" required>
       <input type="submit" id="subButton" value="SUBMIT">
   </div>
+    <div id=textXYZ>
     </div>
     <ul id="toDoList">
     </ul>
     <input id="universalDelete" type="button" value="EMPTY LIST">
   </div>
+</div>
+
 
 <script src="code.js"></script>
 
