--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <h1 id="header-title">TO DO LIST</h1>
 
-  <div id="fieldBox">
+  <div id="field-box">
       <p>Add Something To Your To Do List:</p>
-      <input type="text" id="inputtedChore" size="30px" required>
-      <input type="submit" id="subButton" value="SUBMIT">
+      <input type="text" id="inputted-chore" size="30px" required>
+      <input type="submit" id="sub-button" value="SUBMIT">
   </div>
-    <div id=textXYZ>
+    <div>
     </div>
-    <ul id="toDoList">
+    <ul id="to-do-list">
     </ul>
-    <input id="universalDelete" type="button" value="EMPTY LIST">
+    <input id="empty-list" type="button" value="EMPTY LIST">
   </div>
 </div>
 
